Improved the appearance of the no-javascript notification

--- a/econvenor/templates/app_base.html
+++ b/econvenor/templates/app_base.html
@@ -427,6 +427,8 @@
 
     <noscript>
       <div id="noscript-message">
+        <i class="fa fa-exclamation-triangle fa-fw fa-2x"></i>
+        <br/><br/>
         <p>Your browser does not appear to have JavaScript enabled.</p>
         <p>Please enable Javascript or eConvenor will not work.</p>
       </div>
