--- a/authentication/templates/login_base.html
+++ b/authentication/templates/login_base.html
@@ -72,6 +72,8 @@
       </div><!-- container -->
     </div><!-- section -->
 
+  {% include 'no_javascript.html' %}
+
   <script src="{% static 'js/jquery-1.11.0.min.js' %}"></script> 
   <script src="{% static 'js/bootstrap.min.js' %}"></script>
   <script src="{% static 'js/jquery-ui-1.10.4.custom.min.js' %}"></script>
