--- a/econvenor/commonstatic/css/landing.css
+++ b/econvenor/commonstatic/css/landing.css
@@ -796,3 +796,29 @@ form .panel-heading {
 .real {
   display:inline;
 }
+
+/* NOSCRIPT
+-------------------------------------------------- */
+
+#noscript-message {
+  position:fixed;
+  top:45%;
+  left:25%;
+  width:50%;
+  z-index:10000;
+  text-align:center;
+  color:#ffffff;
+  background-color:#ff0066;
+  padding: 30px 0 20px 0;
+}
+
+#noscript-cover {
+position: absolute;
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+z-index: 9999;
+background-color: #000000;
+opacity: 0.80;
+}
